# pointmar

./: .gitignore  README.md  engine.py  main.py  pyproject.toml  sample.py  setup.sh  upload.py
deploy/mg/shapenet/: shapenet1024.yaml  shapenet1024_random.yaml  shapenet1024_raster.yaml
deploy/mn/shapenet/: shapenet1024_random.yaml
docs/: index.html
docs/samples/shapenet_mar_base_1024pts_3dim/ply/: sample_0.ply  sample_1.ply  sample_10.ply  sample_11.ply  sample_12.ply  sample_13.ply  sample_14.ply  sample_15.ply  sample_16.ply  sample_17.ply  sample_18.ply  sample_19.ply  sample_2.ply  sample_20.ply  sample_21.ply  sample_22.ply  sample_23.ply  sample_24.ply  sample_25.ply  sample_26.ply  sample_3.ply  sample_4.ply  sample_5.ply  sample_6.ply  sample_7.ply  sample_8.ply  sample_9.ply
models/: diffloss.py  mar.py
pointmar/: __init__.py
pointmar/data/: mesh500.py  shapenet.py  shapnet.py
pointmar/diffusion/: respace.py
pointmar/models/: __init__.py  diffloss.py  mar.py  rastermar.py
pointmar/util/: config.py  misc.py
scripts/: mesh500.sh  mesh500_1024.sh  shapenet_1024.sh
